spacing between code

--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@
         .panel>h1 {
             text-align: center;
         }
+
+        .code {
+            letter-spacing: 1em;
+        }
     </style>
 </head>
 
@@ -223,7 +227,7 @@
         <section class="column-15">
             <div class="panel">
                 <!-- Current 3-digit code -->
-                <h1>123</h1>
+                <h1 class="code">123</h1>
                 <!-- 1st line of the 3-digit code -->
                 <div class="columns">
                     <!-- Sub-column where the hints are entered -->
