--- a/index.html
+++ b/index.html
@@ -103,12 +103,31 @@
 
         /* Tabs */
         .tabs li {
-            border-bottom: 2px solid grey;
+            border-bottom: 1px solid grey;
             min-width: 10em;
             text-align: center;
             list-style-type: none;
             display: inline-block;
             margin: 0.5em;
+        }
+
+        .tabs li.is-active {
+            border-width: 2px;
+            font-weight: bold;
+        }
+
+        /* Links */
+        a {
+            color: gray;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: silver;
+        }
+
+        a:active {
+            color: dimgray;
         }
 
         /* Column layout */
