Textfield in 3rd column scaled.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 <div class="columns">
                     <!-- Sub-column where the hints are entered -->
                     <div class="column-70 left">
-                        <input type="text" id="hint1"></input>
+                        <input type="text" id="hint1" style="width: 90%"></input>
                     </div>
                     <!-- Sub-column where the own team enters the code -->
                     <div class="column-15 center">
@@ -266,7 +266,7 @@
                 <div class="columns">
                     <!-- Sub-column where the hints are entered -->
                     <div class="column-70 left">
-                        <input type="text" id="hint1"></input>
+                        <input type="text" id="hint1" style="width: 90%"></input>
                     </div>
                     <!-- Sub-column where the own team enters the code -->
                     <div class="column-15 center">
@@ -281,7 +281,7 @@
                 <div class="columns">
                     <!-- Sub-column where the hints are entered -->
                     <div class="column-70 left">
-                        <input type="text" id="hint1"></input>
+                        <input type="text" id="hint1" style="width: 90%"></input>
                     </div>
                     <!-- Sub-column where the own team enters the code -->
                     <div class="column-15 center">
@@ -291,6 +291,11 @@
                     <div class="column-15 center">
                         <input type="number" id="guess2" min="1" max="4"></input>
                     </div>
+                </div>
+                <div class="columns">
+                    <input type="text" id="hint1" style="width: 50%"></input>
+                    <input type="number" id="guess1" min="1" max="4"></input>
+                    <input type="number" id="guess1" min="1" max="4"></input>
                 </div>
                 <!-- Button to submit -->
                 <input type="button" class="button-submit" value="Submit">
