made IDs unique

--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@
                 <div class="columns">
                     <input type="text" id="hint1"></input>
                     <input type="number" id="guess1" min="1" max="4"></input>
-                    <input type="number" id="guess1" min="1" max="4"></input>
+                    <input type="number" id="guessOthers1" min="1" max="4"></input>
                 </div>
                 <!-- 2nd line of the 3-digit code -->
                 <div class="columns">
-                    <input type="text" id="hint1"></input>
-                    <input type="number" id="guess1" min="1" max="4"></input>
-                    <input type="number" id="guess1" min="1" max="4"></input>
+                    <input type="text" id="hint2"></input>
+                    <input type="number" id="guess2" min="1" max="4"></input>
+                    <input type="number" id="guessOthers2" min="1" max="4"></input>
                 </div>
                 <!-- 3rd line of the 3-digit code -->
                 <div class="columns">
-                    <input type="text" id="hint1"></input>
-                    <input type="number" id="guess1" min="1" max="4"></input>
-                    <input type="number" id="guess1" min="1" max="4"></input>
+                    <input type="text" id="hint3"></input>
+                    <input type="number" id="guess3" min="1" max="4"></input>
+                    <input type="number" id="guessOthers3" min="1" max="4"></input>
                 </div>
                 <!-- Button to submit -->
                 <input type="button" class="button-submit" value="Submit">
