center submit button

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
 </head>
 
 <body>
+    <noscript>JavaScript is needed. Please enable JavaScript for this page in your browser.</noscript>
     <script type="importmap">
     {
       "imports": {
@@ -307,7 +308,9 @@
                     <input type="number" id="guessOthers3" min="1" max="4"></input>
                 </div>
                 <!-- Button to submit -->
-                <input type="button" class="button-submit" value="Submit">
+                <div class="columns" style="justify-content: center">
+                    <input type="button" class="button-submit" value="Submit">
+                </div>
             </div>
 
 
