--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
         .menu-label {
             font-size: 1.25;
             font-weight: 700;
+            margin-left: 10px;
         }
     </style>
 </head>
@@ -220,17 +221,17 @@
         <!-- Left section containing the team information -->
         <aside class="column-15">
             <h1 class="title">Teams</h1>
-            <p class="menu-label" style="margin-left: 10px;">Blue:</p>
+            <p class="menu-label">Blue:</p>
             <ul class="menu-list">
                 <li v-for="player in team1.players">{{ player }} 🧑</li>
             </ul>
-            <p class="menu-label" style="margin-left: 10px;">Red:</p>
+            <p class="menu-label">Red:</p>
             <ul class="menu-list">
                 <li v-for="player in team2.players">{{ player }} 🔑</li>
             </ul>
             <br>
             <h1 class="title">Status</h1>
-            <p class="menu-label" style="margin-left: 10px;">Round: {{ round }}</p>
+            <p class="menu-label">Round: {{ round }}</p>
         </aside>
         <!-- Middle section containing the code words -->
         <main class="column-70" style="border-left: 1px solid #36363640; border-right: 1px solid #36363640;">
