--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>Codebreaker Game</title>
 
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" sizes="any">
+    <link rel="icon" type="image/png" href="favicon.png" sizes="48x48">
     <link rel="stylesheet" href="styles.css">
 </head>
 
